apps/jellyfin/overlays/nishir/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data-sukebe-jav
              mountPath: /data/sukebe/jav
            - name: data-sukebe-doujinshi
              mountPath: /data/sukebe/doujinshi
            - name: data-sukebe-anime
              mountPath: /data/sukebe/anime
            - name: data-series
              mountPath: /data/series
            - name: data-movies
              mountPath: /data/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data-sukebe-jav
          persistentVolumeClaim:
            claimName: sukebe-jav
        - name: data-sukebe-doujinshi
          persistentVolumeClaim:
            claimName: sukebe-doujinshi
        - name: data-sukebe-anime
          persistentVolumeClaim:
            claimName: sukebe-anime
        - name: data-series
          persistentVolumeClaim:
            claimName: series
        - name: data-movies
          persistentVolumeClaim:
            claimName: movies
