apps/jellyfin/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
            - name: movies-data
              mountPath: /data/movies
            - name: music-data
              mountPath: /data/music
            - name: shows-data
              mountPath: /data/shows
            - name: sukebe-doujins-data
              mountPath: /data/sukebe/Doujins
            - name: sukebe-scenes-data
              mountPath: /data/sukebe/Scenes
            - name: sukebe-shows-data
              mountPath: /data/sukebe/Shows
            - name: timeline-data
              mountPath: /data/timeline
      securityContext:
        fsGroup: 1000
        supplementalGroups:
          - 26 # video: host access to /dev/dri device nodes
          - 303 # render: host access to /dev/dri/renderD128
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: music-data
          persistentVolumeClaim:
            claimName: music-data
        - name: shows-data
          persistentVolumeClaim:
            claimName: shows-data
        - name: sukebe-doujins-data
          persistentVolumeClaim:
            claimName: sukebe-doujins-data
        - name: sukebe-scenes-data
          persistentVolumeClaim:
            claimName: sukebe-scenes-data
        - name: sukebe-shows-data
          persistentVolumeClaim:
            claimName: sukebe-shows-data
        - name: timeline-data
          persistentVolumeClaim:
            claimName: timeline-data
